// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render empty 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Header)
    productId="foo"
    rating={
      {
        "average": 0,
        "count": 0,
      }
    }
  >
    <Header
      dispatch={[Function]}
      productId="foo"
      rating={
        {
          "average": 0,
          "count": 0,
        }
      }
      withTopGap={false}
    >
      <NoReviews
        productId="foo"
      >
        <div
          className="tss-1p31f2r-container"
        >
          <AverageRating
            average={0}
            count={0}
            productId="foo"
          >
            <Link
              className="tss-1c2egx7-container"
              data-test-id="ratedStarsAverage"
              disabled={false}
              href="/item/666f6f/write_review"
              itemProp="item"
              itemScope={true}
              itemType="http://schema.org/Review"
              role="text"
              tagName="a"
            >
              <RatingStars
                className=""
                display="large"
                isSelectable={false}
                onSelection={[Function]}
                value={0}
              >
                <div
                  aria-label="reviews.rating_stars"
                  className="css-13azwyo  ui-shared__rating-stars"
                  data-test-id="ratedStars: 0"
                  role="img"
                >
                  <div
                    className="css-4s85e9 rating-stars-empty"
                  >
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="1"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="2"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="3"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="4"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="5"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                  </div>
                  <div
                    className="css-16bht0q rating-stars-filled"
                  />
                </div>
              </RatingStars>
              <RatingCount
                count={0}
                prominent={false}
              />
            </Link>
          </AverageRating>
          <div
            className="tss-10mf5he-noReviews"
          >
            <Text
              string="reviews.no_reviews"
            >
              reviews.no_reviews
            </Text>
            <WriteReviewLink
              productId="foo"
            >
              <div
                className="engage__reviews__write-review-link"
                data-test-id="writeReview"
              >
                <Connect(ButtonLink)
                  aria-label="reviews.button_add"
                  href="/item/666f6f/write_review"
                  noGap={true}
                >
                  <ButtonLink
                    aria-label="reviews.button_add"
                    className=""
                    disabled={false}
                    flat={true}
                    href="/item/666f6f/write_review"
                    navigate={[Function]}
                    noGap={true}
                  >
                    <ActionButtonWithStyles
                      aria-label="reviews.button_add"
                      className=""
                      disableClickDelay={false}
                      disabled={false}
                      flat={true}
                      loading={false}
                      noGap={true}
                      onClick={[Function]}
                      rippleClassName=""
                      rippleSize={null}
                      testId={null}
                      type="secondary"
                      wrapContent={true}
                    >
                      <ActionButton
                        aria-label="reviews.button_add"
                        className=""
                        classes={
                          {
                            "containerCircle": "tss-zn4st4-ActionButton-containerCircle",
                            "noGap": "tss-1zr2s7-ActionButton-noGap",
                            "withGap": "tss-1jype1y-ActionButton-withGap",
                          }
                        }
                        disableClickDelay={false}
                        disabled={false}
                        flat={true}
                        loading={false}
                        noGap={true}
                        onClick={[Function]}
                        rippleClassName=""
                        rippleSize={null}
                        testId={null}
                        type="secondary"
                        wrapContent={true}
                      >
                        <div
                          className="ui-shared__action-button tss-1zr2s7-ActionButton-noGap"
                          data-test-id={null}
                        >
                          <RippleButtonWithStyles
                            className=""
                            disabled={false}
                            flat={true}
                            onClick={[Function]}
                            rippleClassName=""
                            rippleSize={null}
                            testId="Button"
                            type="secondary"
                            wrapContent={true}
                          >
                            <RippleButton
                              className=""
                              classes={
                                {
                                  "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
                                }
                              }
                              disabled={false}
                              flat={true}
                              onClick={[Function]}
                              rippleClassName=""
                              rippleSize={null}
                              testId="Button"
                              type="secondary"
                              wrapContent={true}
                            >
                              <Button
                                className=" ui-shared__ripple-button"
                                disabled={false}
                                flat={true}
                                onClick={[Function]}
                                testId="Button"
                                type="secondary"
                                wrapContent={false}
                              >
                                <Button
                                  className="ui-shared__button css-k7u7lv  ui-shared__ripple-button"
                                  disabled={false}
                                  onClick={[Function]}
                                  testId="Button"
                                  type="button"
                                >
                                  <button
                                    className="ui-shared__button css-k7u7lv  ui-shared__ripple-button tss-16c9pag-root common__button"
                                    data-test-id="Button"
                                    disabled={false}
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <RippleWithStyles
                                      className="tss-p1t6ie-RippleButton-contentWrapper "
                                      fill={true}
                                      overflow={true}
                                      size={null}
                                    >
                                      <Ripple
                                        className="tss-p1t6ie-RippleButton-contentWrapper "
                                        classes={
                                          {
                                            "container": "tss-1dfkr3n-Ripple-container",
                                          }
                                        }
                                        color="#000"
                                        disabled={false}
                                        fill={true}
                                        onClick={[Function]}
                                        onComplete={[Function]}
                                        overflow={true}
                                        size={null}
                                      >
                                        <div
                                          className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                                          data-test-id="Ripple"
                                          onClick={[Function]}
                                          style={null}
                                        >
                                          <Text
                                            string="reviews.button_add"
                                          >
                                            reviews.button_add
                                          </Text>
                                        </div>
                                      </Ripple>
                                    </RippleWithStyles>
                                  </button>
                                </Button>
                              </Button>
                            </RippleButton>
                          </RippleButtonWithStyles>
                        </div>
                      </ActionButton>
                    </ActionButtonWithStyles>
                  </ButtonLink>
                </Connect(ButtonLink)>
              </div>
            </WriteReviewLink>
          </div>
        </div>
      </NoReviews>
    </Header>
  </Connect(Header)>
</Provider>
`;

exports[`<Header /> should render rating summary 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Header)
    productId="foo"
    rating={
      {
        "average": 50,
        "count": 4,
      }
    }
  >
    <Header
      dispatch={[Function]}
      productId="foo"
      rating={
        {
          "average": 50,
          "count": 4,
        }
      }
      withTopGap={false}
    >
      <ReviewsExcerpt
        average={50}
        count={4}
        productId="foo"
        withTopGap={false}
      >
        <div
          className="engage__reviews__reviews-excerpt tss-1p31f2r-container"
          id="reviewsExcerpt"
        >
          <AverageRating
            average={50}
            count={4}
            productId="foo"
          >
            <Link
              className="tss-1c2egx7-container"
              data-test-id="ratedStarsAverage"
              disabled={false}
              href="/item/666f6f/write_review"
              itemProp="item"
              itemScope={true}
              itemType="http://schema.org/Review"
              role="text"
              tagName="a"
            >
              <RatingStars
                className=""
                display="large"
                isSelectable={false}
                onSelection={[Function]}
                value={50}
              >
                <div
                  aria-label="reviews.rating_stars"
                  className="css-13azwyo  ui-shared__rating-stars"
                  data-test-id="ratedStars: 2.5"
                  role="img"
                >
                  <div
                    className="css-4s85e9 rating-stars-empty"
                  >
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="1"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="2"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="3"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="4"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="5"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                  </div>
                  <div
                    className="css-16bht0q rating-stars-filled"
                  >
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="6"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="7"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="css-ntfpo9 css-q4owmg"
                      key="2"
                    >
                      <StarHalfIcon
                        size="2.3em"
                      >
                        <Icon
                          content="<defs><path id="a" d="M0 0h24v24H0z"/></defs> <clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath> <path clip-path="ul(#b)" d="M12 2L9.2 8.6 2 9.2 7.5 14l-1.6 7 6.2-3.7m-.1-1.9V6.1m2.8 7.3"/>"
                          size="2.3em"
                        >
                          <svg
                            className="tss-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<defs><path id="a" d="M0 0h24v24H0z"/></defs> <clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath> <path clip-path="ul(#b)" d="M12 2L9.2 8.6 2 9.2 7.5 14l-1.6 7 6.2-3.7m-.1-1.9V6.1m2.8 7.3"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </StarHalfIcon>
                    </div>
                  </div>
                </div>
              </RatingStars>
              <RatingCount
                count={4}
                prominent={false}
              >
                <Translate
                  acceptPlainTextWithPlaceholders={false}
                  className="tss-ee426l-greyStyle engage__reviews__rating-count"
                  params={
                    {
                      "count": 4,
                      "prominent": false,
                    }
                  }
                  role={null}
                  string="reviews.review_count"
                  transform={null}
                >
                  <span
                    className="tss-ee426l-greyStyle engage__reviews__rating-count"
                    role={null}
                  >
                    reviews.review_count
                  </span>
                </Translate>
              </RatingCount>
            </Link>
          </AverageRating>
          <div
            className="tss-1fbozmi-reviewsLine"
          >
            <Translate
              acceptPlainTextWithPlaceholders={false}
              className="tss-15ijniw-averageRatingText"
              params={{}}
              role={null}
              string="reviews.rating"
              transform={null}
            >
              <span
                className="tss-15ijniw-averageRatingText"
                role={null}
              >
                reviews.rating
                <RatingNumber
                  className="tss-13t6pfh-averageRatingNumber"
                  key=".0"
                  rating={50}
                >
                  50
                </RatingNumber>
              </span>
            </Translate>
            <WriteReviewLink
              productId="foo"
            >
              <div
                className="engage__reviews__write-review-link"
                data-test-id="writeReview"
              >
                <Connect(ButtonLink)
                  aria-label="reviews.button_add"
                  href="/item/666f6f/write_review"
                  noGap={true}
                >
                  <ButtonLink
                    aria-label="reviews.button_add"
                    className=""
                    disabled={false}
                    flat={true}
                    href="/item/666f6f/write_review"
                    navigate={[Function]}
                    noGap={true}
                  >
                    <ActionButtonWithStyles
                      aria-label="reviews.button_add"
                      className=""
                      disableClickDelay={false}
                      disabled={false}
                      flat={true}
                      loading={false}
                      noGap={true}
                      onClick={[Function]}
                      rippleClassName=""
                      rippleSize={null}
                      testId={null}
                      type="secondary"
                      wrapContent={true}
                    >
                      <ActionButton
                        aria-label="reviews.button_add"
                        className=""
                        classes={
                          {
                            "containerCircle": "tss-zn4st4-ActionButton-containerCircle",
                            "noGap": "tss-1zr2s7-ActionButton-noGap",
                            "withGap": "tss-1jype1y-ActionButton-withGap",
                          }
                        }
                        disableClickDelay={false}
                        disabled={false}
                        flat={true}
                        loading={false}
                        noGap={true}
                        onClick={[Function]}
                        rippleClassName=""
                        rippleSize={null}
                        testId={null}
                        type="secondary"
                        wrapContent={true}
                      >
                        <div
                          className="ui-shared__action-button tss-1zr2s7-ActionButton-noGap"
                          data-test-id={null}
                        >
                          <RippleButtonWithStyles
                            className=""
                            disabled={false}
                            flat={true}
                            onClick={[Function]}
                            rippleClassName=""
                            rippleSize={null}
                            testId="Button"
                            type="secondary"
                            wrapContent={true}
                          >
                            <RippleButton
                              className=""
                              classes={
                                {
                                  "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
                                }
                              }
                              disabled={false}
                              flat={true}
                              onClick={[Function]}
                              rippleClassName=""
                              rippleSize={null}
                              testId="Button"
                              type="secondary"
                              wrapContent={true}
                            >
                              <Button
                                className=" ui-shared__ripple-button"
                                disabled={false}
                                flat={true}
                                onClick={[Function]}
                                testId="Button"
                                type="secondary"
                                wrapContent={false}
                              >
                                <Button
                                  className="ui-shared__button css-k7u7lv  ui-shared__ripple-button"
                                  disabled={false}
                                  onClick={[Function]}
                                  testId="Button"
                                  type="button"
                                >
                                  <button
                                    className="ui-shared__button css-k7u7lv  ui-shared__ripple-button tss-16c9pag-root common__button"
                                    data-test-id="Button"
                                    disabled={false}
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <RippleWithStyles
                                      className="tss-p1t6ie-RippleButton-contentWrapper "
                                      fill={true}
                                      overflow={true}
                                      size={null}
                                    >
                                      <Ripple
                                        className="tss-p1t6ie-RippleButton-contentWrapper "
                                        classes={
                                          {
                                            "container": "tss-1dfkr3n-Ripple-container",
                                          }
                                        }
                                        color="#000"
                                        disabled={false}
                                        fill={true}
                                        onClick={[Function]}
                                        onComplete={[Function]}
                                        overflow={true}
                                        size={null}
                                      >
                                        <div
                                          className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                                          data-test-id="Ripple"
                                          onClick={[Function]}
                                          style={null}
                                        >
                                          <Text
                                            string="reviews.button_add"
                                          >
                                            reviews.button_add
                                          </Text>
                                        </div>
                                      </Ripple>
                                    </RippleWithStyles>
                                  </button>
                                </Button>
                              </Button>
                            </RippleButton>
                          </RippleButtonWithStyles>
                        </div>
                      </ActionButton>
                    </ActionButtonWithStyles>
                  </ButtonLink>
                </Connect(ButtonLink)>
              </div>
            </WriteReviewLink>
          </div>
        </div>
      </ReviewsExcerpt>
    </Header>
  </Connect(Header)>
</Provider>
`;
